css/learning.css
.page-description{
	margin-top:10px;
}

.grid {
	margin-top:10px;
}

.center-wrapper {
	text-align: center;
}
#custom-border-radius .ui-btn-icon-notext.ui-corner-all {
    -webkit-border-radius: .3125em;
    border-radius: .3125em;
}

